add a lint-fix command

--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,16 @@ commands =
   poetry run mypy vaccine_feed_ingest
 
 
+[testenv:lint-fix]
+deps =
+  lint
+commands =
+  poetry run flake8 vaccine_feed_ingest
+  poetry run isort vaccine_feed_ingest
+  poetry run black vaccine_feed_ingest
+  poetry run mypy vaccine_feed_ingest
+
+
 [testenv:test]
 deps =
   test
